[package]
name = "cargo-cacher"
version = "1.0.2"
license = "MIT OR Apache-2.0"
description = "cargo-cacher is a crates.io proxy that will proxy requests made when building a package with Cargo"
authors = ["Chris MacNaughton <chmacnaughton@gmail.com>"]
homepage = "https://github.com/ChrisMacNaughton/cargo-cacher"
repository = "https://github.com/ChrisMacNaughton/cargo-cacher.git"

[dependencies]
clap = "2.14"
iron = "0.4"
log = "0.3.6"
logger = "0.1"
router = "0.4"
rustc-serialize = "0.3"
scoped_threadpool = "0.1"
simple_logger = "0.4"
walkdir = "1"
