[package]
name = "cargo-cacher"
version = "1.2.0"
license = "MIT OR Apache-2.0"
description = "cargo-cacher is a crates.io proxy that will proxy requests made when building a package with Cargo"
authors = ["Chris MacNaughton <chmacnaughton@gmail.com>"]
homepage = "https://github.com/ChrisMacNaughton/cargo-cacher"
repository = "https://github.com/ChrisMacNaughton/cargo-cacher.git"

[dependencies]
clap = "2.14"
iron = "0.6.0"
log = "0.3.6"
logger = "0.4.0"
router = "0.6.0"
rusqlite = "0.13.0"
scoped_threadpool = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "0.4"
walkdir = "1"
