[package]
name = "cargo-cacher"
version = "1.2.2"
license = "MIT OR Apache-2.0"
description = "cargo-cacher is a crates.io proxy that will proxy requests made when building a package with Cargo"
authors = ["Chris MacNaughton <chmacnaughton@gmail.com>"]
homepage = "https://github.com/ChrisMacNaughton/cargo-cacher"
repository = "https://github.com/ChrisMacNaughton/cargo-cacher.git"

[dependencies]
cargo-lock = "4.0"
clap = "2.33.0"
iron = "0.6.1"
log = "0.4.8"
logger = "0.4.0"
router = "0.6.0"
rusqlite = "0.21.0"
scoped_threadpool = "0.1.9"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
simple_logger = "1.3.0"
walkdir = "2.2.9"
dirs = "2.0.2"
humantime = "1.3.0"
